services/traefik/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    name: traefik
  name: traefik
