services/traefik/traefik-web-ui.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: web
      port: 8080
      targetPort: admin
  externalTrafficPolicy: Local
  type: LoadBalancer
