services/traefik/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    kubernetes.io/ingress.class: traefik
  name: traefik-dashboard
spec:
  rules:
    - host: traefik.local.mickwheelz.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik-dashboard
              port:
                number: 80
