services/traefik/traefik-web-ui-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: traefik.local.mickwheelz.net
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 8080
        path: /
        pathType: Prefix
